Custom URI for data
DCO 1.1 Signed-off-by: Graham Wills <gwills@us.ibm.com>